# whisper.cpp

./: .gitignore  CMakeLists.txt  segment_53265faf-63f9-5ced-8374-a70a7d077641.txt  test.py
examples/: CMakeLists.txt  common.cpp  common.h
examples/stream/: CMakeLists.txt  README.md  stream.cpp
